--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,10 @@ border: 3px solid rgba(117,200,170,1.00);
     border-radius: 0px!important;
 }
 
+.btn-gallery:hover{
+    color: black;
+}
+
 
 .btn-gallery:hover, .btn-gallery:active, .btn-gallery:focus{
     border-bottom: 3px solid white;
